# Backend

./: .clang-format  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  README.md  cleanup.sh  docker-compose.yml
apps/: CMakeLists.txt  argon2_example.cpp  available_handlers_example.cpp  complete_transaction_example.cpp  example_database_wrapper.cpp  generic_message_example.cpp  greedy_spanner_example.cpp  parsing_example.cpp  parsing_example_handler.cpp  parsing_speed_comparison.cpp  schedule_tester.cpp  server.cpp  status_response_example.cpp  test_userbase.cpp
benchmarks/: CMakeLists.txt  graph_message.cpp
database/: spanners_tables.pgsql
include/auth/: auth_utils.hpp
include/config/: config.hpp
include/handling/: handler_factory.hpp  handler_list.hpp  handler_proxy.hpp  handler_utilities.hpp
include/handling/handlers/: abstract_handler.hpp  connectivity_handler.hpp  convex_hull_handler.hpp  diameter_handler.hpp  dijkstra_handler.hpp  fragility_handler.hpp  general_spanner_handler.hpp  girth_handler.hpp  greedy_spanner_handler.hpp  kruskal_handler.hpp  mst_handler.hpp  radius_handler.hpp  simplification_handler.hpp
include/handling/handlers/fault_tolerance_spanner/: fault_tolerance_spanner_module.hpp  handler_bodwin_dinitz.hpp  handler_chechik_langberg_edges.hpp  handler_chechik_langberg_vertices.hpp  handler_dinitz_krauthgamer.hpp  handler_resilient.hpp
include/handling/handlers/geospanner/: geospanner_module.hpp  handler_delta_greedy_euclid.hpp  handler_path_greedy_euclid.hpp  handler_yao_graph_euclid.hpp  handler_yao_parametrized_euclid.hpp  handler_yao_pruning_euclid.hpp
include/networking/: exceptions.hpp  utils.hpp
include/networking/io/: client_connection.hpp  client_server.hpp  connection.hpp  connection_handler.hpp  io_server.hpp  management_server.hpp  request_handling.hpp
include/networking/messages/: graph_message.hpp  meta_data.hpp  node_coordinates.hpp
include/networking/requests/: abstract_request.hpp  generic_request.hpp  request_factory.hpp  request_type.hpp  shortest_path_request.hpp
include/networking/responses/: abstract_response.hpp  available_handlers_response.hpp  generic_response.hpp  new_job_response.hpp  origin_graph_response.hpp  response_factory.hpp  response_type.hpp  shortest_path_response.hpp  status_code.hpp  status_response.hpp
include/persistence/: database_wrapper.hpp  user.hpp
include/scheduler/: process_flags.hpp  scheduler.hpp
include/util/: GraphProperties.h
scripts/: run_benchmarks.py
spannersctl/: CMakeLists.txt
spannersctl/include/io/: io.hpp
spannersctl/include/subcommands/: constants.hpp  job.hpp  scheduler.hpp  user.hpp
spannersctl/include/util/: join.hpp  json.hpp  span.hpp
spannersctl/src/: main.cpp
spannersctl/src/io/: io.cpp
spannersctl/src/subcommands/: job.cpp  scheduler.cpp  user.cpp
spannersctl/src/util/: join.cpp  json.cpp
src/: CMakeLists.txt
src/auth/: auth_utils.cpp
src/config/: config.cpp
src/handling/: handler_factory.cpp  handler_process.cpp  handler_proxy.cpp  handler_utilities.cpp  register_handlers.cpp
src/handling/handlers/: abstract_handler.cpp  connectivity_handler.cpp  convex_hull_handler.cpp  diameter_handler.cpp  dijkstra_handler.cpp  fragility_handler.cpp  girth_handler.cpp  greedy_spanner_handler.cpp  kruskal_handler.cpp  mst_handler.cpp  radius_handler.cpp  simplification_handler.cpp
src/handling/handlers/fault_tolerance_spanner/: handler_bodwin_dinitz.cpp  handler_chechik_langberg_edges.cpp  handler_chechik_langberg_vertices.cpp  handler_dinitz_krauthgamer.cpp  handler_resilient.cpp
src/handling/handlers/geospanner/: handler_delta_greedy_euclid.cpp  handler_path_greedy_euclid.cpp  handler_yao_graph_euclid.cpp  handler_yao_parametrized_euclid.cpp  handler_yao_pruning_euclid.cpp
src/io/: client_connection.cpp  client_server.cpp  connection.cpp  io_server.cpp  management_server.cpp  request_handling.cpp
src/messages/: graph_message.cpp  node_coordinates.cpp
src/persistence/: database_wrapper.cpp  user.cpp
src/requests/: abstract_request.cpp  generic_request.cpp  request_factory.cpp  shortest_path_request.cpp
src/responses/: abstract_response.cpp  available_handlers_response.cpp  generic_response.cpp  new_job_response.cpp  origin_graph_response.cpp  response_factory.cpp  shortest_path_response.cpp  status_response.cpp
src/scheduler/: scheduler.cpp
tests/: CMakeLists.txt
util/: Dockerfile  create-user.sh
